# workhours

./: README.md  pyproject.toml
workhours/: hours_worked.py  main.py
