[tool.poetry]
name = "workhours"
version = "0.1.0"
description = "CLI to track working hours"
authors = ["Breno Silva <brenophp@gmail.com>, Amanda Ferraboli <amanda.ferraboli@gmail.com>"]
license = "GNU v3.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
